--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
-                    <span class="text-2xl font-bold text-gray-800">YourBrand</span>
+                    <img src="images/SMC.png" alt="SMC" class="h-10">
+                    <span class="text-2xl font-bold text-gray-800">SMC</span>
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="#home" class="text-gray-700 hover:text-orange-500">Home</a>
